k8s/21-ingress/nginx-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-admin
  name: nginx-admin
spec:
  containers:
  - image: spurin/nginx-debug
    name: nginx-admin
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
